--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,12 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  get_it: ^8.0.3
+  firebase_core: ^3.13.1
+  firebase_auth: ^5.5.4
+  flutter_secure_storage: ^9.2.4
+
+  flutter_screenutil: ^5.9.0
 
 dev_dependencies:
   flutter_test:
